--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Tecnologias Estrada</title>
-    
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636392592">
     </script>
@@ -36,6 +36,36 @@
 
       gtag('config', 'AW-16636392592');
     </script>
+
+    <!-- Event snippet for Vista de una página conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+  function gtag_report_conversion(url) {
+    var callback = function () {
+      if (typeof(url) != 'undefined') {
+        window.location = url;
+      }
+    };
+    gtag('event', 'conversion', {
+        'send_to': 'AW-16636392592/a1SnCMWtzMAZEJDp7Pw9',
+        'value': 1.0,
+        'currency': 'MXN',
+        'event_callback': callback
+    });
+    return false;
+  }
+  </script>
+
+  <!-- Event snippet for Vista de una página conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16636392592/a1SnCMWtzMAZEJDp7Pw9',
+      'value': 1.0,
+      'currency': 'MXN'
+  });
+</script>
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
