sitemap.txt y tag de google search console en index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,9 @@
       content="Pagina Web Oficial de Tecnologias Estrada"
       data-rh="true"
     />
+    
+    <meta name="google-site-verification" content="gEiUGz8o6Vu3D90B5dRzzMXu4lbUSejuSVbIIX6srKw" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
