--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,15 +30,14 @@
     -->
     <title>Tecnologias Estrada</title>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16636392592">
-    </script>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZXP3VDBER"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'AW-16636392592');
+      gtag('config', 'G-WZXP3VDBER');
     </script>
 
     <!-- Event snippet for Vista de una página conversion page
