--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -5,6 +5,8 @@
     <title>Single Page Apps for GitHub Pages</title>
     <script type="text/javascript">
 
+        //Dejar en 0 si uso un custom domain
+        //Cambiar a 1 si uso un domain establecido por el hosting
       var pathSegmentsToKeep = 0;
 
       var l = window.location;
